fix : experiencia align images and text

--- a/styles.css
+++ b/styles.css
@@ -442,10 +442,13 @@ h3 {
     margin: 0 !important;
 }
 
+#experiencia h6 {
+    margin-bottom: 0 !important;
+}
+
 #experiencia span img {
     width: 32px;
     height: 32px;
-    margin-right: 10px;
 }
 
 #experiencia span {
@@ -453,6 +456,13 @@ h3 {
     flex-direction: row;
     align-items: center;
     margin-bottom: 2%;
+}
+
+#experiencia .wrapper-experiencia-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 14px;
 }
 
 .container-proyecto {
